--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next-auth": "^4.24.4",
     "react": "^18",
     "react-dom": "^18",
+    "sharp": "^0.32.6",
     "swr": "^2.2.4"
   },
   "devDependencies": {
